# VaultCLI

./: .gitignore  .vault_key  README.md  auth.py  build_obfuscated.ps1  build_obfuscated.sh  install.ps1  install.sh  main.py  pyinstaller_entry.py  pyproject.toml  requirements.txt  session.py  vault.py  vault.spec
.github/workflows/: release-binaries.yml
vaultcli/: __init__.py  auth.py  cli.py  config.py  db.py  main.py  session.py  setup_wizard.py  vault.py
vaultcli/api/: supabase_auth.py  supabase_db.py
vaultcli/commands/: auth.py  init.py  interactive.py  secrets.py  system.py
vaultcli/core/: config.py  secret_types.py  session.py  vault_manager.py
vaultcli/crypto/: __init__.py  encryption.py  hashing.py  key_derivation.py  vault.py
vaultcli/ui/: formatters.py  prompts.py
