[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "vaultcli"
version = "0.1.0"
description = "A Supabase-backed password vault CLI."
requires-python = ">=3.10"
dependencies = [
    "cryptography==47.0.0",
    "python-dotenv==1.2.2",
    "requests>=2.32.0",
    "supabase==2.29.0",
    "supabase-auth==2.29.0",
    "supabase-functions==2.29.0",
]

[project.scripts]
vault = "vaultcli.main:main"


[tool.setuptools]
packages = ["vaultcli"]
