[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "vaultcli"
version = "0.1.0"
description = "A provider-agnostic encrypted password vault CLI."
requires-python = ">=3.10"
dependencies = [
    "argon2-cffi>=23.1.0",
    "cryptography==47.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv==1.2.2",
    "requests>=2.32.0",
    "supabase==2.29.0",
    "supabase-auth==2.29.0",
    "supabase-functions==2.29.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
vault = "vaultcli.cli:main"
vault-api = "backend.server:run"


[tool.setuptools]
packages = ["vaultcli", "backend"]
